<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_user"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/lbl_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_user"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pass"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/lbl_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_pass"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mail"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_mail"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gender"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <TextView
            android:id="@+id/lbl_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_gender"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_share"
        android:id="@+id/btn_share"
        android:layout_marginTop="25dp"/>

</LinearLayout>